Check if correct arguments were set