@@ -2,7 +2,10 @@ import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
+import java.lang.management.ManagementFactory;
+import java.lang.management.RuntimeMXBean;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -12,17 +15,28 @@ public class HelloWorld {
 			.collect(Collectors.toSet());
 
 	public static void main(String[] args) {
+		List<String> arguments = ManagementFactory.getRuntimeMXBean().getInputArguments();
+
+		boolean isPreviewEnabled = arguments.contains("--enable-preview");
+		boolean isNativeAccessEnabled = arguments.stream().anyMatch(arg -> arg.startsWith("--enable-native-access"));
+
+
 		System.out.printf("""
 		ImageIO Reader Test
 		
-		Min Java Required: 21, Current Version %s%n
+		Min Java Required: 21, Current Version %s
+		
+		--enable-preview %b
+		--enable-native-access %b
 		
 		Java Library Path Must Include HEIF Library:
 		%s
 		
 		%d Enabled Formats: %s
 		
-		""", System.getProperty("java.version"), System.getProperty("java.library.path"),
+		""", System.getProperty("java.version"),
+				isPreviewEnabled, isNativeAccessEnabled,
+				System.getProperty("java.library.path"),
 				availableFormats.size(), availableFormats);
 
 		File heicFile = new File("IMG.HEIC");
